@@ -24,7 +24,7 @@
     </tr>
     <tr>
       <th>Latest Stable Release</th>
-      <td><a href="v4.0.2.html">v4.0.2</a></td>
+      <td><a href="v4.0.3.html">v4.0.3</a></td>
     </tr>
     <tr>
       <th>Master Download Site</th>
@@ -117,7 +117,7 @@
   </ul>
   <hr>
   <p>
-    Last updated  $Date: 2012-06-16 00:19:37 $.
+    Last updated  $Date: 2012-09-22 16:12:44 $.
   </p>
 </body>
 </html>
